--- a/djangocms_admin_style/sass/components/_tables.scss
+++ b/djangocms_admin_style/sass/components/_tables.scss
@@ -200,7 +200,7 @@
             select {
                 float: none;
                 vertical-align: top;
-                width: auto !important;
+                // width: auto !important;
             }
         }
         &.delete {
